# Modelando2025

./: 404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  hello.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
Season 1/S1E1/S1E1 One possible classification of data/: index.html
Season 1/S1E1/S1E1 Una posible clasificación de los datos/: index.html
Season 1/S1E2/S1E2-Tipos de sistemas/: index.html
Season 1/S1E2/S1E2-TypeOfSystems/: index.html
Season 1/S1E3/Modelando para OLTP/: index.html
Season 1/S1E3/OLTP modelling/: index.html
Season 1/S1E4/ModeladoOlap/: index.html
Season 1/S1E4/OlapModelling/: index.html
Season 1/S1E5/DeDwHastaLakeHouses/: index.html
Season 1/S1E5/FromDataWarehousesToDataLakes/: index.html
Season 2/S2E1/S2E1 Keys/: index.html
Season 2/S2E1/S2E1 Llaves/: index.html
Season 2/S2E2/UsandoOpenAIparaIngDeDatos/: index.html
Season 2/S2E3/UnifiedStarSchema/: index.html
Season 3/S3E1/AZD_EasyAuthdemo/: index.html
assets/javascripts/: bundle.88dd0f4e.min.js
docs/: index.md
docs/Season 1/S1E2/: S1E2-Tipos de sistemas.md
docs/Season 1/S1E3/: Modelando para OLTP.md  OLTP modelling.md
docs/Season 1/S1E4/: ModeladoOlap.md  OlapModelling.md
overrides/partials/: comments.html
search/: search_index.json
tags/: index.html
