[project]
name = "modelando2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-git-committers-plugin>=0.2.3",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-i18n>=0.4.6",
    "mkdocs-material>=9.5.49",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-rss-plugin>=1.17.1",
]
